--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
             <li class="menu__list-item">
               <a href="#slider" class="menu__list-link">Отзывы</a>
             </li>
+            <a href="./catalog.html" class="header__wrapper-btn btn btn--mobile">В магазин</a>
           </ul>
         </nav>
 
@@ -44,10 +45,14 @@
             <a href="#" class="header__content-link">Связаться с нами</a>
           </div>
         </div>
+
+          <div class="nav-icon">
+            <div class="nav-icon__middle"></div>
+          </div>
       </div>
     </div>
   </header>
- 
+
     <main class="main">
       <section class="heading">
         <div class="container">
@@ -88,7 +93,7 @@
           </div>
         </div>
       </section>
-
+  
       <section class="about" id="about">
         <div class="container">
           <h2 class="about__title title">О компании</h2>
@@ -331,7 +336,7 @@
       </section>
 
 
-      <section class="slider" id="moi">
+     <section class="slider" id="moi">
         <div class="container">
           <div class="slider-box">
             <h2 class="slider-box__title title">Мои ученики</h2>
@@ -391,7 +396,7 @@
           </div>
         </div>
       </section>
-
+ 
       <section class="bottom">
         <div class="container">
           <div class="bottom-block">
@@ -487,6 +492,7 @@
         </div>
       </section>
     </main>
+   
     <footer class="footer">
       <div class="container">
         <div class="footer__inner">
@@ -545,7 +551,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> 
  
 
   <script src="https://unpkg.com/imask"></script>
